erDiagram
  AUTH_USERS ||--|| PROFILES : has
  AUTH_USERS o|--o| CUSTOMERS : links
  CUSTOMERS ||--o{ CUSTOMER_ADDRESSES : owns
  CATEGORIES o|--o{ CATEGORIES : parent
  PRODUCTS ||--o{ PRODUCT_VARIANTS : has
  PRODUCTS ||--o{ PRODUCT_MEDIA : has
  PRODUCTS ||--o{ PRODUCT_CATEGORIES : categorized
  CATEGORIES ||--o{ PRODUCT_CATEGORIES : contains
  PRODUCT_VARIANTS ||--o{ INVENTORY_BALANCES : stocked
  INVENTORY_LOCATIONS ||--o{ INVENTORY_BALANCES : stores
  PRODUCT_VARIANTS ||--o{ INVENTORY_MOVEMENTS : moves
  INVENTORY_LOCATIONS ||--o{ INVENTORY_MOVEMENTS : occurs_at
  CUSTOMERS ||--o{ SALES_ORDERS : places
  SALES_ORDERS ||--o{ SALES_ORDER_ITEMS : contains
  PRODUCT_VARIANTS ||--o{ SALES_ORDER_ITEMS : sold_as
  CUSTOMERS ||--o{ INVOICES : billed
  SALES_ORDERS o|--o{ INVOICES : generates
  INVOICES ||--o{ INVOICE_ITEMS : contains
  PRODUCT_VARIANTS ||--o{ INVOICE_ITEMS : references
  INVOICES ||--o{ PAYMENTS : receives
  EXPENSE_CATEGORIES ||--o{ EXPENSES : classifies
  PROFILES ||--o{ AUDIT_LOG : acts
  PROFILES ||--o{ IMPORT_JOBS : starts
  IMPORT_JOBS ||--o{ IMPORT_JOB_ROWS : contains
